	  but accepted for backward-compatibility
	check_ide_smart -0/--auto-off, -1/--auto-on and -i/--immediate: options have
	  been disabled because they were broken
	State retention: the NAGIOS_PLUGIN_STATE_DIRECTORY environment variable has been
	  renamed MP_STATE_PATH. The old variable will continue to work in v1.6.x
	check_swap used to allow returning OK on a system without swap when only percent thresholds
	  were used. This is no longer the case and one must now use -n/--no-swap=<state>
	The Perl and Shell plugins now use the PATH specified via ./configure's --trusted-path
	  option, or "/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin" by default

1.5 2nd October 2013
	ENHANCEMENTS
	New check_dbi plugin for checking an (SQL) database using DBI
	Let OpenSSL load its configuration file (see the OPENSSL_config(3) man page)
	Add performance data to check_apt
	Add performance data to check_procs
	Added -4/-6 options to check_dig (Ville Mattila)
	New check_oracle --connect option to perform real login
	New check_nagios -t option to override the default timeout
	New check_disk -f/--freespace-ignore-reserved option to ignore space reserved for root
	New check_disk -N/--include-type option to limit the filesystem types to check
	Allow for building the plugins in parallel
	Add --without-{dbi,ldap,radius} options to ./configure
	Made Verbose output of check_sensors compliant (Gabriele Tozzi)
	New switch -E/--extended-perfdata for check_http to print additional performance data (Sebastian Nohn)
	New check_http -d option to specify a string to expect within the response headers
	New check_http -J/-K options for client certificate authentication support
	Add support for executing queries to check_pgsql
	Let check_pgsql accept a UNIX socket directory as hostname
	New check_pgsql -o option to specify additional connection parameters
	New check_fping -S option to specify the source IP address
	New check_fping -I option to specify the interface to bind to